# tarea-3-t3_diodozener

./: README.md  benchmark.cpp  biquad.cpp  biquad.h  cascade.cpp  cascade.h  client_filter.cpp  design_filters.m  filter_client.cpp  filter_client.h  generateaudio.m  graficas.m  listen_filter.m  main.cpp  meson.build  viewfreqresp.m
Mats/: butter_bandpass.mat  butter_highpass.mat  butter_lowpass.mat  butter_stopband.mat  cheby1_bandpass.mat  cheby1_highpass.mat  cheby1_lowpass.mat  cheby1_stopband.mat  cheby2_bandpass.mat  cheby2_highpass.mat  cheby2_lowpass.mat  cheby2_stopband.mat  ellip_bandpass.mat  ellip_highpass.mat  ellip_lowpass.mat  ellip_stopband.mat
builddir/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json  tarea3
builddir/meson-info/: intro-benchmarks.json  intro-buildoptions.json  intro-buildsystem_files.json  intro-dependencies.json  intro-projectinfo.json  intro-targets.json  meson-info.json
builddir/meson-logs/: meson-log.txt
builddir/meson-private/: coredata.dat.prev
